Deployment_Project/force-app/main/default/objects/Employee_Reporting__c/fields/DeveloperG__c.field-meta.xml
<CustomField>
    <fullName>DeveloperG__c</fullName>
    <label>DeveloperG</label>
    <referenceTo>DeveloperG__c</referenceTo>
    <relationshipLabel>Employee Reportings</relationshipLabel>
    <relationshipName>Employee_Reportings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>