Deployment_Project/force-app/main/default/objects/Employee_Reporting__c/fields/ManagerG__c.field-meta.xml
<CustomField>
    <fullName>ManagerG__c</fullName>
    <label>ManagerG</label>
    <referenceTo>ManagerG__c</referenceTo>
    <relationshipLabel>Employee Reportings</relationshipLabel>
    <relationshipName>Employee_Reportings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>